more tw in about. Fix osxes error if no upload

--- a/app/views/about/_links.html.slim
+++ b/app/views/about/_links.html.slim
@@ -1,15 +1,15 @@
 .w3-card-2.w3-bar-block[data-controller="buttonLink"]
   .w3-bar-item
-    button.lite-goldey.w100[data-action="click->buttonLink#linkTo" data-url="/about/about"] About Rcash
+    button.lite-goldey.w100.p-1[data-action="click->buttonLink#linkTo" data-url="/about/about"] About Rcash
 
   .w3-bar-item
-    button.lite-goldey.w100[data-action="click->buttonLink#linkTo" data-url="/about/accounts"] Accounts
+    button.lite-goldey.w100.p-1[data-action="click->buttonLink#linkTo" data-url="/about/accounts"] Accounts
 
   .w3-bar-item
-    button.lite-goldey.w100[data-action="click->buttonLink#linkTo" data-url="/about/entries"] Entries
+    button.lite-goldey.w100.p-1[data-action="click->buttonLink#linkTo" data-url="/about/entries"] Entries
 
   .w3-bar-item
-    button.lite-goldey.w100[data-action="click->buttonLink#linkTo" data-url="/about/banking"] Banking
+    button.lite-goldey.w100.p-1[data-action="click->buttonLink#linkTo" data-url="/about/banking"] Banking
 
   .w3-bar-item
-    button.lite-goldey.w100[data-action="click->buttonLink#linkTo" data-url="/about/reports"] Reports
+    button.lite-goldey.w100.p-1[data-action="click->buttonLink#linkTo" data-url="/about/reports"] Reports
