--- a/app/views/about/reports.html.slim
+++ b/app/views/about/reports.html.slim
@@ -6,13 +6,13 @@
       = image_tag('reports.png',class:'image-fit')
       .w3-row.
         .w3-col.s10
-          p.m-1Under Construction. There are a few out there
+          p.my-1.5 Under Construction. There are a few out there
 
     .w3-col.s2
       h5.strong About Reports
       .w3-card-2.w3-bar-block.w100
         .w3-bar-item
-          button.lite-goldey.w100[data-action="click->aboutPager#goTo" data-url="page1"] Reports
+          button.lite-goldey.w100.p-1[data-action="click->aboutPager#goTo" data-url="page1"] Reports
       = render partial:'links'
 
  
