--- a/app/views/about/about.html.slim
+++ b/app/views/about/about.html.slim
@@ -2,12 +2,12 @@
   .w3-row.about.leading-tight
     .w3-col.s9
       h5.strong About RCash
-      p.m-1 RCash is a Web based double entry accounting application.
+      p.my-1.5 RCash is a Web based double entry accounting application.
 
-      p.m-1 The about link buttons to the right will provide some detail on the the areas listed. This page is just an overview of the look, feel and flow of the application.
+      p.my-1.5 The about link buttons to the right will provide some detail on the the areas listed. This page is just an overview of the look, feel and flow of the application.
       .w3-row.w3-row-padding
         .w3-col.s6
-          p.m-1 <strong>Buttons, Buttons, Buttons</strong> There are many, maybe too many! Almost all links use Buttons or Icons instead of an Anchors (the blue words on most web sites)
+          p.my-1.5 <strong>Buttons, Buttons, Buttons</strong> There are many, maybe too many! Almost all links use Buttons or Icons instead of an Anchors (the blue words on most web sites)
           
           div
             button.lime-link-button Lime Link Button
