--- a/app/views/bank_statements/index.html.slim
+++ b/app/views/bank_statements/index.html.slim
@@ -22,14 +22,14 @@
           td.text-right = to_money(bank_statement.ending_balance)
           td = bank_statement.reconciled_date
           td.actions
-            = link_to ofxes_path do
-              i[aria-hidden="true" class="fa fa-upload"]
+            - unless bank_statement.reconciled_date.present?
+              = link_to ofxes_path do
+                i[aria-hidden="true" class="fa fa-upload"]
             = link_to bank_statement do
               i class="fas fa-eye"
             = link_to edit_bank_statement_path(bank_statement) do
               i class="fas fa-edit"
             = link_to '<i class="far fa-credit-card" aria-hidden="true"></i>'.html_safe, reconcile_bank_statement_path(bank_statement) unless bank_statement.reconciled_date.present?
-
             = link_to bank_statement, data: { confirm: 'Are you sure?' }, method: :delete do
               i class="fas fa-trash w3-text-red"
 
