convert ofxes from autocomplete autopickr
added refid to autopickr as option defined in data-refid-value

--- a/app/views/ofxes/_pickr.html.slim
+++ b/app/views/ofxes/_pickr.html.slim
@@ -1,6 +1,6 @@
 div
   strong AutoPickr  
-  i - Just enter a description to search
+  i - Search entery description to replicate
   div[class="#{blueBox}"]
     / just calling a helper blueBox to set tailwind classes for a simple button
     div
