--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html
     body
       header.noprint
         == render 'layouts/header'
-      = render 'layouts/menubar'
+        == render 'layouts/menubar'
 
       main class="mx-5 "
         == yield
