--- a/app/views/ofxes/show.html.slim
+++ b/app/views/ofxes/show.html.slim
@@ -132,7 +132,7 @@
                           ]
                           = render partial:"ofxes/pickr"
                           div
-                            = check_box_tag('contains','no', false,class:"w3-left", data:{autopickr_target:"contains"},class:'mt-1') 
+                            = check_box_tag('contains','no', false,class:"w3-left mt-1", data:{autopickr_target:"contains"}) 
                             span.ml-3.align-top Use Contains Search
 
 
