--- a/app/components/gold_menu/component.html.slim
+++ b/app/components/gold_menu/component.html.slim
@@ -1,7 +1,7 @@
 .w3-card-2[class="bg-yellow-200"]
 
   div[class="strong bg-yellow-50 text-lg pl-2"] = @title
-  - if @action = 'get'
+  - if @action == 'get'
     - @links.each do |l|
       .gbtn.w100.p-1= link_to( l[0], l[1])
 
