--- a/app/views/vfw/deposits/index.html.slim
+++ b/app/views/vfw/deposits/index.html.slim
@@ -21,15 +21,15 @@
       - @deposits.each do |deposit|
         tr
           td = deposit.date
-          td.tright = deposit.sales_revenue
-          td.tright = deposit.other_revenue
-          td.tright = deposit.cash_sales
-          td.tright = deposit.credit_sales
-          td.tright = deposit.tips_paid
-          td.tright = deposit.sales_deposit
-          td.tright = deposit.other_deposit
-          td.tright = deposit.total_deposit
-          td.tright = deposit.cash_out
+          td.tright = dmoney deposit.sales_revenue
+          td.tright = dmoney deposit.other_revenue
+          td.tright = dmoney deposit.cash_sales
+          td.tright = dmoney deposit.credit_sales
+          td.tright = dmoney deposit.tips_paid
+          td.tright = dmoney deposit.sales_deposit
+          td.tright = dmoney deposit.other_deposit
+          td.tright = dmoney(deposit.total_deposit)
+          td.tright = dmoney deposit.cash_out
           td.actions 
             = link_to vfw_deposit_path(deposit) do
               i class="fas fa-eye blue-link"
